fixed layout issues

--- a/src/pages/juniors/JuniorPracticeSession.css
+++ b/src/pages/juniors/JuniorPracticeSession.css
@@ -21,7 +21,7 @@
 
 /* Header */
 .junior-practice-header {
-    height: 80px;
+    height: 64px;
     /* Reduced height */
     position: relative;
     z-index: 20;
